[package]
name = "alarm_player"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mimalloc = "0.1"
rumqttc = "0.24"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
config = "0.15"
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-log = "0.2"
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std", "fmt", "time"]}
time = { version = "0.3", features = ["serde", "parsing"] }
cron = "0.15"
bytes = "1.10"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }

tokio-tungstenite = "0.21"
futures-util = "0.3"

rodio = "0.21"
hound = "3.5"
cpal = "0.16"
futures = "0.3"

[dev-dependencies]
ctor = "0.2"
